/* English */ +citations <ready-made#32287501>

--- a/en/r/ready-made.741519.wikitext
+++ b/en/r/ready-made.741519.wikitext
@@ -3,14 +3,31 @@
 ===Adjective===
 {{en-adj}}
 
-# [[made|Made]] or [[prepared]] in [[advance]] of need. {{rfquote}}
+# Preexisting or made previously and suitable for use without (further) preparation or modification; ''comparable with regard to the amount of preparation required''.
+#* '''1937''', Association for Childhood Education International, ''Childhood Education'', Volume 14, [https://books.google.com.au/books?id=nM0VAQAAIAAJ&q=%22the+more%7Cmost+ready-made%22&dq=%22the+more%7Cmost+ready-made%22&hl=en&sa=X&ei=su7yVN4uz_nxBbzzgcAE&redir_esc=y page 35],
+#*: Incidentally, they became mindful of the meaning of thrift and waste and learned to practice an economy of material and operations which was not elicited in the play with the more '''ready-made''' educational material.
+#* '''1993''', Leslie Howard Owens, ''Commentary'' to Bill C.Malone, ''Blacks and Whites and the Music of the Old South'', Ted Ownby (editor), ''Black and White'',  [https://books.google.com.au/books?id=cM93Z7Mq06AC&pg=PA185&dq=%22the+more%7Cmost+ready-made%22&hl=en&sa=X&ei=su7yVN4uz_nxBbzzgcAE&redir_esc=y#v=onepage&q=%22the%20more%7Cmost%20ready-made%22&f=false page 185],
+#*: The periods of massive revivals, especially the Awakenings, and spiritual movements in Protestant America in general seem the most '''ready made''' to attract Africans to Christianity.
+#* '''2010''', Mark Buchanan, ''Spiritual Rhythm: Being with Jesus Every Season of Your Soul'', [https://books.google.com.au/books?id=V7yPcPiSr18C&pg=PA131&dq=%22the+more%7Cmost+ready-made%22&hl=en&sa=X&ei=su7yVN4uz_nxBbzzgcAE&redir_esc=y#v=onepage&q=%22the%20more%7Cmost%20ready-made%22&f=false page 131],
+#*: The potlatch was perhaps the most '''ready-made''' container for explaining the gospel and the kingdom of God, in all its counterintuitiveness, to native people.
+# {{context|uncomparable|lang=en}} Made in advance to a standard specification.
+#* '''1993''', Ronald Aminzade, ''Ballots and Barricades: Class Formation and Republican Politics in France, 1830-1871'', [https://books.google.com.au/books?id=kTbybLDLPiAC&pg=PA68&dq=%22ready-made%22&hl=en&sa=X&ei=cA7zVJmmBaK2mwXClILoDw&redir_esc=y#v=onepage&q=%22ready-made%22&f=false page 68],
+#*: During the 1830s and 1840s, '''ready-made''' standardized shoes and clothing increasingly challenged the custom-made products of small handicraft workshops.
+#* '''2000''', Diana Crane, ''Fashion and Its Social Agendas: Class, Gender, and Identity in Clothing'', [https://books.google.com.au/books?id=vphcHONAXmwC&pg=PA75&dq=%22ready-made%22&hl=en&sa=X&ei=cA7zVJmmBaK2mwXClILoDw&redir_esc=y#v=onepage&q=%22ready-made%22&f=false page 75],
+#*: Commercial use of these machines was enhanced by the development of a system of proportional measurements and subsequently of proportional sizes, making feasible '''ready-made''' clothing on a mass scale.
+# Made or prepared in advance and used regularly or habitually without original thought.
+#* '''2008''', Elizabeth A. Grosz, ''Chaos, Territory, Art: Deleuze and the Framing of the Earth'', [https://books.google.com.au/books?id=OWd-Q8a2n2UC&pg=PA4&dq=%22the+more%7Cmost+ready-made%22&hl=en&sa=X&ei=su7yVN4uz_nxBbzzgcAE&redir_esc=y#v=onepage&q=%22the%20more%7Cmost%20ready-made%22&f=false page 4], footnote,
+#*: {{...}}including both the most everyday and popular, the most '''ready-made''' or found objects, the most quotidian of performances.
 
 ====Synonyms====
+* {{sense|suitable for use without (further) preparation or modification}}
+* {{sense|made to standard specification}} [[off-the-peg]]
+* {{sense|used regularly or repeated habitually without original thought}}
 * See the list of antonyms under [[Wikisaurus:custom-made]]
 
 ====Antonyms====
+* {{sense|made to standard specification}} [[custom-made]], [[made-to-order]]
 * See also: [[Wikisaurus:custom-made]]
-* [[made-to-order]]
 
 ====Translations====
 {{trans-top|made in advance}}
@@ -20,6 +37,10 @@
 * Finnish: {{t+|fi|valmis|alt=valmis-}}
 * French: {{t+|fr|tout fait}}
 {{trans-bottom}}
+
+====See also====
+* [[pre-cooked]]
+* [[ready-to-wear]]
 
 ===Noun===
 {{en-noun}}
