t+mi:[[whatiwhati]] ([[WT:EDIT|Assisted]]) <bend#32289029>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -92,7 +92,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 *: Sorani: {{t|ku|چه‌ماندن}}
 * Latin: {{t|la|flecto}}, {{t|la|sinuō}}, {{t|la|curvo}}
 * Latvian: {{t|lv|saliekt}}
-* Maori: {{t|mi|ngawaki}} {{qualifier|refers to knees}}, {{t|mi|whakapiko}}
+* Maori: {{t|mi|ngawaki}} {{qualifier|refers to knees}}, {{t|mi|whakapiko}}, {{t|mi|whatiwhati}} {{qualifier|Refers to bending the legs when running}}
 * Norwegian: {{t+|no|bøye}}
 * Polish: {{t+|pl|zgiąć}}
 * Portuguese: {{t+|pt|dobrar}}, {{t+|pt|curvar}}
