/* Synonyms */ <ready-made#32289515>

--- a/en/r/ready-made.741519.wikitext
+++ b/en/r/ready-made.741519.wikitext
@@ -23,7 +23,7 @@
 * {{sense|suitable for use without (further) preparation or modification}}
 * {{sense|made to standard specification}} [[off-the-peg]]
 * {{sense|used regularly or repeated habitually without original thought}}
-* See the list of antonyms under [[Wikisaurus:custom-made]]
+* See also: [[Wikisaurus:custom-made]]
 
 ====Antonyms====
 * {{sense|made to standard specification}} [[custom-made]], [[made-to-order]]
