--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -63,6 +63,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Finnish: {{t+|fi|pilli}}
 * French: {{t+|fr|sifflet|m}}
 * Galician: {{t+|gl|chifre|m}}
+* Georgian: {{t|ka|სასტვენი|sc=Geor}}
 * German: {{t+|de|Pfeife|f}}, {{t+|de|Trillerpfeife|f}}, {{t+|de|Flöte|f}}
 * Greek: {{t+|el|σφυρίχτρα|f|sc=Grek}}
 * Haitian Creole: {{t|ht|siflèt}}
