t+ka:[[სტვენა]] t+ka:[[დასტვენა]] t+ka:[[ჩასტვენა]] ([[WT:EDIT|Assisted]]) <whistle#32290697>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -107,6 +107,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Chinese:
 *: Mandarin: {{t+|cmn|口哨|tr=kǒushào|sc=Hani}}, {{t+|cmn|口笛|tr=kǒudí|sc=Hani}}
 * French: {{t+|fr|sifflet|m}}
+* Georgian: {{t|ka|სტვენა|sc=Geor}}, {{t|ka|დასტვენა|sc=Geor}}, {{t|ka|ჩასტვენა|sc=Geor}}
 * German: {{t+|de|Pfeifen|n}}
 * Greek: {{t+|el|σφύριγμα|n|tr=sfýrigma|sc=Grek}}
 * Hebrew: {{t|he|שריקה|f|tr=sh'riká}}
