t+ka:[[სისხლდენა]] ([[WT:EDIT|Assisted]]) <bleed#32293779>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -65,7 +65,7 @@ From {{etyl|ang|en}} {{m|ang|blēdan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*bl
 * French: {{t+|fr|saigner}}
 * Friulian: {{t|fur|sanganâ}}
 * Galician: {{t+|gl|sangrar}}
-* Georgian: {{t|ka|სისხლის დენა|sc=Geor}}
+* Georgian: {{t|ka|სისხლის დენა|sc=Geor}}, {{t|ka|სისხლდენა|sc=Geor}}
 * German: {{t+|de|bluten}}
 * Greek: {{t+|el|αιμορραγώ}}, {{t+|el|ματώνω}}
 * Hebrew: {{t|he|דִּימֵּם|tr=dimem}}
