--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -197,6 +197,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Kannada: {{t+|kn|ಹಂದಿ|sc=Knda}}
 * Karelian: {{t|krl|počči}}
 * Kazakh: {{t|kk|шошқа}}
+* Khasi: {{t|kha|sniang}}
 * Khmer: {{t+|km|ជ្រូក|tr=jruuk|sc=Khmr}}, {{t|km|សត្វជ្រូក|tr=sat jruuk|sc=Khmr}}
 * Kimaragang: {{t|kqr|wogok}}
 * Korean: {{t+|ko|돼지|sc=Kore}}
