--- a/en/g/griffon-vulture.775127.wikitext
+++ b/en/g/griffon-vulture.775127.wikitext
@@ -1,10 +1,11 @@
-{{rfv}}
 ==English==
 
 ===Adjective===
 {{head|en|adjectives}}
 
-# {{attributive of|griffon vulture|lang=en|nodot=1}}, ''noun''.
-#: ''&nbsp;''
+# {{rfv-sense}} {{attributive of|griffon vulture|lang=en|nodot=1}}, ''noun''.
+# {{alternative form of|griffon vulture|lang=en}}
+#* '''1992''', Jonathan S. Adams, ''The Myth of Wild Africa: Conservation Without Illusion'', page 52:
+#* {{...}} the Dornier collided with a '''griffon-vulture''' and crashed near the Loliondo Mountains, {{...}}
 
 [[Category:English adjectives]]
