--- a/en/g/griffon-vulture.775127.wikitext
+++ b/en/g/griffon-vulture.775127.wikitext
@@ -3,10 +3,11 @@
 ===Adjective===
 {{head|en|adjectives}}
 
-# {{rfv-sense}} {{attributive of|griffon vulture|lang=en|nodot=1}}, ''noun''.
 # {{lb|en|uncommon}} {{alternative form of|griffon vulture|lang=en}}
 #* '''1884''', John Worcester, ''The Animals of the Bible and Their Correspondences'', page 128:
 #*: Mr. Wood and Mr. Tristram agree that the '''griffon-vulture''' is the bird, or one of the birds, whose name is rendered "The Eagle" in our version of the Scriptures.
+#* '''1990''', Claude Lévi-Strauss, ''The Origin of Table Manners: Mythologiques'', page 140:
+#*: The '''griffon-vulture's''' daughters gathered round him and, as they were very pretty, he made advances to them.
 #* '''1992''', Jonathan S. Adams, ''The Myth of Wild Africa: Conservation Without Illusion'', page 52:
 #* {{...}} the Dornier collided with a '''griffon-vulture''' and crashed near the Loliondo Mountains, {{...}}
 
