--- a/en/g/griffon-vulture.775127.wikitext
+++ b/en/g/griffon-vulture.775127.wikitext
@@ -9,6 +9,6 @@
 #* '''1990''', Claude Lévi-Strauss, ''The Origin of Table Manners: Mythologiques'', page 140:
 #*: The '''griffon-vulture's''' daughters gathered round him and, as they were very pretty, he made advances to them.
 #* '''1992''', Jonathan S. Adams, ''The Myth of Wild Africa: Conservation Without Illusion'', page 52:
-#* {{...}} the Dornier collided with a '''griffon-vulture''' and crashed near the Loliondo Mountains, {{...}}
+#*: {{...}} the Dornier collided with a '''griffon-vulture''' and crashed near the Loliondo Mountains, {{...}}
 
 [[Category:English adjectives]]
