/* English */ <griffon-vulture#32303068>

--- a/en/g/griffon-vulture.775127.wikitext
+++ b/en/g/griffon-vulture.775127.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
-===Adjective===
-{{head|en|adjectives}}
+===Noun===
+{{en-noun}}
 
 # {{lb|en|uncommon}} {{alternative form of|griffon vulture|lang=en}}
 #* '''1884''', John Worcester, ''The Animals of the Bible and Their Correspondences'', page 128:
