t+ka:[[ჯოხი]] t+ka:[[კვერთხი]] ([[WT:EDIT|Assisted]]) <staff#32304593>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -70,6 +70,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 * Esperanto: {{t|eo|bastono}}
 * Finnish: {{t+|fi|sauva}}, {{t+|fi|salko}}
 * French: {{t+|fr|bâton|m}}, {{t+|fr|canne|f}}
+* Georgian: {{t|ka|ჯოხი|sc=Geor}}, {{t|ka|კვერთხი|sc=Geor}}
 * German: {{t+|de|Stab|m}}
 * Greek: {{t+|el|ράβδος|f|tr=rávdos|sc=Grek}}, {{t+|el|ραβδί|n|tr=ravdí|sc=Grek}}
 * Hebrew: {{t|he|מַקֵּל|m}}
