--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -126,6 +126,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 * Dutch: {{t+|nl|medewerkers|p}}, {{t+|nl|personeel|n}}
 * Finnish: {{t|fi|henkilöstö}}, {{t+|fi|henkilökunta}}
 * French: {{t+|fr|personnel|m}}, {{t+|fr|staff|m}}
+* Georgian: {{t+|ka|შტატი|sc=Geor}}, {{t|ka|პერსონალი|sc=Geor}}
 * German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}}, {{t+|de|Stab|m}}
 * Greek: {{t+|el|προσωπικό|n|tr=prosopikó|sc=Grek}}, {{t+|el|επιτελείο|n|tr=epiteleío|sc=Grek}}
 * Irish: {{t+|ga|foireann|f}}
