--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -131,6 +131,18 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 
 ----
 
+==Dutch==
+
+====Pronunciation====
+* {{audio|nl-maximum.ogg|audio|lang=nl}}
+
+===Noun===
+{{nl-noun|n|maxima|pl2=maximums|maximumpje}}
+
+# [[#English|maximum]]
+
+----
+
 ==French==
 
 ===Pronunciation===
