t+ro:[[hermină]] ([[WT:EDIT|Assisted]]) <ermine#32306437>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -73,7 +73,7 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{m|la|mūs}} {{term|Armenius|
 * Polish: {{t+|pl|gronostaj|m}}
 * Portuguese: {{t+|pt|arminho|m}}
 * Romani: {{t|rom|ermina|f}}
-* Romanian: {{t|ro|hermelina|f}}
+* Romanian: {{t|ro|hermelina|f}}, {{t+|ro|hermină|f}}
 * Romansch: {{t|rm|ermelin}}
 * Russian: {{t+|ru|горностай|m|tr=gornostáj}}
 * Sami: [[buoidda]]
