--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -148,7 +148,9 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Mongolian: {{t|mn|дахин|sc=Cyrl}}
 * Nahuatl: {{t|nah|occeppa}}
 * Navajo: {{t|nv|nááná}}
-* Norwegian: {{t+|no|igjen}}
+* Norwegian: 
+*: Bokmål: {{t+|nb|igjen}}, {{t|nb|på nytt}}
+*: Nynorsk: {{t|nn|igjen}}, {{t|nn|på ny}}, {{t|nn|på nytt}}
 * Occitan: {{t+|oc|encara}}, {{t|oc|de nòu}}
 * Pashto: {{t+|ps|بيا|tr=byâ}}
 * Persian: {{t+|fa|دگربار|tr=degarbâr}}, {{t+|fa|دوباره|tr=do-bâre|sc=fa-Arab}}, {{t+|fa|باز|tr=bâz|sc=fa-Arab}}
