--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -95,6 +95,8 @@ Abbreviation of various terms and phrases.
 ===Anagrams===
 * [[DC#English|DC]], [[Dc#English|Dc]], [[dc#English|dc]]
 
+[[Category:en:Crossdressing]]
+
 ----
 
 ==Catalan==
