--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -23,7 +23,9 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 # An individual object or distinct entity.
 # {{context|informal|lang=en}} Something that is normal or generally recognised.
 #: {{usex|lang=en|Bacon pie? Is that a '''thing'''?}}
-# {{context|legal|lang=en}} Whatever can be [[own]]ed.
+# {{context|legal|lang=en}}
+## Whatever can be [[own]]ed.
+## [[corporeal|Corporeal]] [[object]].
 # The [[latest]] [[fad]] or [[fashion]].
 # {{context|in the plural|lang=en}} [[clothes|Clothes]], [[possessions]] or [[equipment]].
 # {{context|informal|lang=en}} A unit or container, usually containing edible goods.
