--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -13,13 +13,13 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 ===Noun===
 {{en-noun}}
 
-# Violent derangement of mind; madness; insanity.
-# Excessive or unreasonable desire; insane passion affecting one or many people; fanaticism.
+# Violent derangement of mind; [[madness]]; [[insanity]].
+# Excessive or unreasonable desire; insane passion affecting one or many people; [[fanaticism]].
 <!-- Modified Webster 1913 defs -->
 #* {{quote-magazine|date=2013-07-20|volume=408|issue=8845|magazine={{w|The Economist}}
 |title=[http://www.economist.com/news/http://www.economist.com/news/business/21582001-army-new-online-courses-scaring-wits-out-traditional-universities-can-they The attack of the MOOCs]
 |passage=Dotcom '''mania''' was slow in coming to higher education, but now it has the venerable industry firmly in its grip. Since the launch early last year of Udacity and Coursera, two Silicon Valley start-ups offering free education through MOOCs, massive open online courses, the ivory towers of academia have been shaken to their foundations.}}
-# {{context|psychiatry|lang=en}} The state of abnormally elevated or irritable mood, arousal, and/or energy levels.
+# {{context|psychiatry|lang=en}} The state of abnormally [[elevated]] or irritable [[mood]], [[arousal]], and/or [[energy]] levels.
 
 ====Related terms====
 * [[manic]]
@@ -64,6 +64,9 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 {{trans-top|state of abnormally elevated or irritable mood, arousal, and/or energy levels}}
 {{trans-mid}}
 {{trans-bottom}}
+
+===External links===
+* {{R:OneLook}}
 
 ===Anagrams===
 * [[amain#English|amain]], [[Amina#English|Amina]], [[amnia#English|amnia]], [[anima#English|anima]]
