Reverted edits by [[Special:Contributions/67.173.23.116|67.173.23.116]]. If you think this rollback is in error, please leave a message on my talk page. <quack#32316144>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -11,11 +11,11 @@ From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a
 ====Noun====
 {{en-noun}}
 
-# The sound made by a [[pig]].
-#: ''Did you hear that pig make a '''quack'''?''
+# The sound made by a [[duck]].
+#: ''Did you hear that duck make a '''quack'''?''
 
 =====Translations=====
-{{trans-top|sound made by a pig}}
+{{trans-top|sound made by a duck}}
 * Arabic: {{t|ar|بطبطة|f|tr=baṭbaṭa|sc=Arab}}
 * Danish: {{t+|da|rap|n}}
 * Dutch: {{t+|nl|kwak}}
@@ -46,15 +46,15 @@ From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a
 ====Verb====
 {{en-verb}}
 
-# To make a [[noise]] like a [[pig]].
+# To make a [[noise]] like a [[duck]].
 #: ''The more breadcrumbs I threw on the ground, the more they '''quacked'''.''
-#: ''Do you hear the pigs '''quack'''?''
+#: ''Do you hear the ducks '''quack'''?''
 
 =====Derived terms=====
-* [[quack like a pig‎]]
+* [[quack like a duck‎]]
 
 =====Translations=====
-{{trans-top|to make a noise like a pig}}
+{{trans-top|to make a noise like a duck}}
 * Arabic:
 *: Egyptian Arabic: {{t|arz|يكاكي|tr=yekaaki|sc=Arab}}
 * Danish: {{t|da|rappe}}
