--- a/en/h/homodyne.775811.wikitext
+++ b/en/h/homodyne.775811.wikitext
@@ -13,7 +13,7 @@
 * [[synchrodyne]]
 
 ====See also====
-* {{pedialite|heterodyne detection}}
+* {{pedialite|homodyne detection}}
 
 ===Verb===
 {{en-verb|homodyn}}
