--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -83,18 +83,18 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 * Amharic: {{t|am|አረፋ|sc=Ethi}}
 * Arabic: {{t|ar|فقاعة|f|tr=fuqqāʿa|sc=Arab}}
 * Aragonese: {{t|an|bambolla|f}}
-* Armenian: {{t|hy|պղպջակ|tr=pġpǰak}}
+* Armenian: {{t|hy|պղպջակ}}
 * Assamese: {{t-needed|as}}
 * Asturian: {{t|ast|burbuya|f}}, {{t|ast|boya|f}}
 * Aymara: {{t|ay|pukulli}}
 * Azeri: {{t+|az|köpük}}
 * Bashkir: {{t|ba|ҡыуыҡ|sc=Cyrl}}
 * Basque: {{t|eu|burbuila}}
-* Belarusian: {{t|be|бурбалка|f|tr=búrbalka|sc=Cyrl}}, {{t|be|пузыр|m|tr=puzýr|sc=Cyrl}}
+* Belarusian: {{t|be|бу́рбалка|f|sc=Cyrl}}, {{t|be|пузы́р|m|sc=Cyrl}}
 * Bengali: {{t|bn|বুদ্বুদ|tr=budbuda|sc=Beng}}
 * Breton: {{t+|br|lagadenn|f}}
-* Bulgarian: {{t|bg|мехурче|n|tr=mehurče}}
-* Burmese: {{t+|my|ပူဖောင်း|tr=puhpaung:}}
+* Bulgarian: {{t|bg|мехурче|n}}
+* Burmese: {{t+|my|ပူဖောင်း}}
 * Catalan: {{t|ca|bombolla|f}}
 * Cherokee: {{t-needed|chr}}
 * Chichewa: {{t|ny|nthibwinthibwi}}
@@ -113,9 +113,9 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 * French: {{t+|fr|bulle|f}}
 * Friulian: {{t|fur|bùfule|f}}
 * Galician: {{t|gl|burbulla|f}}
-* Georgian: {{t|ka|ბუშტი|tr=bušti|sc=Geor}}
+* Georgian: {{t|ka|ბუშტი|sc=Geor}}
 * German: {{t+|de|Blase|f}}
-* Greek: {{t+|el|φυσαλίδα|f|tr=fysalída|sc=Grek}}
+* Greek: {{t+|el|φυσαλίδα|f|sc=Grek}}
 * Gujarati: {{t|gu|છેતરપિંડી|f|tr=chētarapiṇḍī|sc=Gujr}}, {{t|gu|બબલ|f|tr=babala|sc=Gujr}}
 * Hausa: {{t|ha|kumfa}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
@@ -129,7 +129,7 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 * Irish: {{t|ga|boilgeog|f}}
 * Italian: {{t+|it|bolla|f}}
 * Japanese: {{t+|ja|泡|tr=あわ, awa|sc=Jpan}}, {{t|ja|泡立つ|tr=あわだつ, awadatsu|sc=Jpan}}, {{t+|ja|バブル|tr=baburu|sc=Jpan}}
-* Kannada: {{t+|kn|ಮರಳು|tr=maraḷu|sc=Knda}}
+* Kannada: {{t+|kn|ಮರಳು|sc=Knda}}
 * Kazakh: {{t|kk|көбік|sc=Cyrl}}
 * Khmer: {{t|km|ពងទឹក|tr=pɔɔng tɨk|sc=Khmr}}
 * Kirundi: {{t|rn|ku-zīkuruka}}, {{t|rn|gu-sebura}}
@@ -139,12 +139,12 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 *: Kurmanji: {{t|kmr|billq}}
 *: Sorani: {{t|ku|بڵق|sc=ku-Arab}}
 * Kyrgyz: {{t+|ky|көбүк|sc=Cyrl}}
-* Lao: {{t|lo|ຟອງ|tr=fong|sc=Laoo}}
+* Lao: {{t|lo|ຟອງ|sc=Laoo}}
 * Latin: {{t|la|bulla|f}}
 * Latvian: {{t+|lv|burbulis|m}}
 * Lithuanian: {{t|lt|burbulas|f}}
 * Luxembourgish: {{t|lb|Blos|f}}
-* Macedonian: {{t|mk|меур|m|tr=méur}}
+* Macedonian: {{t|mk|меур|m}}
 * Malay: {{t|ms|buih}}
 * Malayalam: {{t+|ml|കുമിള|sc=Mlym}}
 * Maori: {{t|mi|mirumiru}}
@@ -163,7 +163,7 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 * Punjabi: {{t|pa|ਬੁਲਬੁਲਾ|m|tr=bulabulā|sc=Guru}}
 * Romanian: {{t+|ro|balon|n}}, {{t+|ro|bășică|f}}, {{t+|ro|bulă|f}}
 * Romansch: {{t|rm|vaschia|f}}, {{t|rm|scufla|f}}
-* Russian: {{t+|ru|пузырь|m|tr=puzýrʹ}}
+* Russian: {{t+|ru|пузы́рь|m}}
 * Sanskrit: {{t|sa|बुद्बुद|m}}
 * Sardinian: {{t|sc|bùlla|f}}
 * Scots: {{t|sco|blab}}
@@ -180,12 +180,12 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 * Spanish: {{t+|es|burbuja|f}}, {{t|es|pompa|f}} {{qualifier|soap bubble}}
 * Swedish: {{t+|sv|bubbla|c}}, {{t+|sv|såpbubblor}} {{qualifier|soap bubble}}
 * Tagalog: {{t|tl|bula}}, {{t+|tl|kulo}}
-* Tamil: {{t+|ta|குமிழி|tr=kumiẓi|sc=Taml}}
-* Telugu: {{t+|te|బుడగ|tr=buḍaga}}, {{t+|te|బుడ్డ|tr=buḍḍa|sc=Telu}}
+* Tamil: {{t+|ta|குமிழி|sc=Taml}}
+* Telugu: {{t+|te|బుడగ}}, {{t+|te|బుడ్డ|sc=Telu}}
 * Thai: {{t+|th|ฟอง|tr=fakhang|sc=Thai}}
 * Turkish: {{t+|tr|köpük}}
 * Turkmen: {{t|tk|köpürjik}}
-* Ukrainian: {{t|uk|пузир|m|tr=puzýr|sc=Cyrl}}, {{t|uk|міхур|m|tr=mixúr|sc=Cyrl}}
+* Ukrainian: {{t|uk|пузи́р|m|sc=Cyrl}}, {{t|uk|міху́р|m|sc=Cyrl}}
 * Urdu: {{t|ur|بلا|m|tr=bullā|sc=ur-Arab}}
 * Uyghur: {{t|ug|ماغزاپ|sc=ug-Arab}}
 * Uzbek: {{t+|uz|pufak}}
@@ -198,36 +198,36 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 {{trans-bottom}}
 
 {{trans-top|small spherical cavity in a solid}}
-* Bulgarian: {{t|bg|мехурче|n|tr=mehurče}}
+* Bulgarian: {{t|bg|мехурче|n}}
 * Catalan: {{t|ca|bombolla|f}}
 * Dutch: {{t+|nl|bel|f}}
 * Finnish: {{t|fi|kupla}}
 * French: {{t+|fr|trou|m}}
 * German: {{t+|de|Blase|f}}
-* Greek: {{t+|el|φυσαλίδα|tr=fysalída}}
+* Greek: {{t+|el|φυσαλίδα}}
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ku|بڵق|sc=ku-Arab}}
-* Macedonian: {{t|mk|меурче|n|tr=méurče}}
+* Macedonian: {{t|mk|меурче|n}}
 * Portuguese: {{t+|pt|bolha|f}}
-* Russian: {{t+|ru|пузырь|m|tr=puzýrʹ}}, {{t+|ru|пузырёк|m|tr=puzyrjók}}
-* Telugu: {{t+|te|బుడగ|tr=buḍaga}}
+* Russian: {{t+|ru|пузы́рь|m}}, {{t+|ru|пузырёк|m|tr=puzyrjók}}
+* Telugu: {{t+|te|బుడగ}}
 {{trans-bottom}}
 
 {{trans-top|anything resembling a hollow sphere}}
-* Bulgarian: {{t+|bg|мехур|m|tr=mehur}}
+* Bulgarian: {{t+|bg|мехур|m}}
 * Catalan: {{t|ca|bombolla|f}}
 * Dutch: {{t+|nl|bel|f}}
 * Finnish: {{t|fi|kupla}}
 * German: {{t+|de|Blase|f}}
-* Greek: {{t+|el|φυσαλίδα|f|tr=fysalída|sc=Grek}}, {{t+|el|φούσκα|f|tr=foúska|sc=Grek}}
+* Greek: {{t+|el|φυσαλίδα|f|sc=Grek}}, {{t+|el|φούσκα|f|sc=Grek}}
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ku|بڵق|sc=ku-Arab}}
-* Macedonian: {{t|mk|меур|m|tr=méur}}
+* Macedonian: {{t|mk|меур|m}}
 * Portuguese: {{t+|pt|bolha|f}}
-* Russian: {{t+|ru|пузырь|m|tr=puzýrʹ}}, {{t+|ru|пузырёк|m|tr=puzyrjók}}
-* Telugu: {{t+|te|బుడగ|tr=buḍaga}}
+* Russian: {{t+|ru|пузы́рь|m}}, {{t+|ru|пузырёк|m}}
+* Telugu: {{t+|te|బుడగ}}
 {{trans-bottom}}
 
 {{trans-top|period of intense speculation in a market}}
@@ -236,16 +236,16 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 * Finnish: {{t|fi|kupla}}
 * French: {{t+|fr|bulle|f}}
 * German: {{t+|de|Blase|m}}
-* Greek: {{t+|el|φούσκα|f|tr=foúska|sc=Grek}}
+* Greek: {{t+|el|φούσκα|f|sc=Grek}}
 {{trans-mid}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
 * Italian: {{t+|it|bolla|f}}
 * Japanese: {{t+|ja|バブル|tr=baburu}}, {{t|ja|水膨れ|tr=みずぶくれ, mizubukure}}
 * Portuguese: {{t+|pt|bolha|f}}
-* Russian: {{t+|ru|пузырь|m|tr=puzýrʹ}}
+* Russian: {{t+|ru|пузы́рь|m}}
 * Spanish: {{t+|es|burbuja|f}}
 * Swedish: {{t+|sv|bubbla|c}}
-* Telugu: {{t+|te|బుడగ|tr=buḍaga}}
+* Telugu: {{t+|te|బుడగ}}
 {{trans-bottom}}
 
 {{trans-see|someone who has been fooled|dupe}}
@@ -307,7 +307,7 @@ Partly imitative, also influenced by {{term|burble|lang=en}}. Compare Middle Dut
 * Finnish: {{t|fi|kuplia}}, {{t|fi|poreilla}}, {{t|fi|porista}}
 * French: {{t+|fr|bouillonner}}
 * German: {{t+|de|blubbern}}
-* Greek: {{t+|el|χοχλάζω|tr=chochlázo}}
+* Greek: {{t+|el|χοχλάζω}}
 * Hungarian: {{t+|hu|buborékol}}, {{t+|hu|bugyborékol}}
 * Ido: {{t+|io|ebuliar}}, {{t+|io|ebulieskar}}
 * Khmer: {{t|km|បែកពពុះ|tr=baek pɔpuh|sc=Khmr}}
