--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -11,7 +11,7 @@ From {{etyl|frm|en}} {{term|pole||hen|lang=frm}} + {{term|cat|lang=en}}. So name
 ===Noun===
 {{en-noun}}
 
-# A [[weasel]]-like animal of the genus ''[[Mustela]]'', notably the [[European polecat]], ''[[Mustela putorius]]''.
+# A [[weasel]]-like animal of the genus ''[[Mustela]]'', notably the {{vern|European polecat}}, ''[[Mustela putorius]]''.
 # {{context|US|dialect|lang=en}} A [[skunk]].
 
 ====Quotations====
