--- a/en/m/macrophallic.801849.wikitext
+++ b/en/m/macrophallic.801849.wikitext
@@ -1,12 +1,17 @@
 ==English==
 
 ===Etymology===
-{{prefix|macro|phallic|lang=en}}
+From {{prefix|macro|phallic|lang=en}}.
+
+===Pronunciation===
+*{{a|UK}}} {{IPA|/makɹə(ʊ)ˈfalɪk/|lang=en}}
 
 ===Adjective===
-{{en-adj|-}}
-# Having an exceptionally large [[penis]].
-#: ''It is advantageous to be '''macrophallic''' in the [[pornography]] industry.''
+{{en-adj}}
+
+# Having a large [[penis]]. {{defdate|from 19th c.}}
+#*'''2001''', David M Friedman, ''A Mind of its Own'', Robert Hale 2009, p. 20:
+#*:A cure was found only after those men begged Priapus to return, named him god of gardens and herds, and made '''macrophallic''' statues of him, which they placed in their yards.
 
 ====References====
 *[http://books.google.com/books?id=x7rY8uGk1OYC&pg=PA590&dq=%22macrophallic%22&hl=en&ei=LJ0aTqyqJIrn0QHLgq2YBQ&sa=X&oi=book_result&ct=result&resnum=3&ved=0CDYQ6AEwAg#v=onepage&q=%22macrophallic%22&f=false 1906 reference]
