--- a/en/m/macrophallic.801849.wikitext
+++ b/en/m/macrophallic.801849.wikitext
@@ -4,7 +4,7 @@
 From {{prefix|macro|phallic|lang=en}}.
 
 ===Pronunciation===
-*{{a|UK}}} {{IPA|/makɹə(ʊ)ˈfalɪk/|lang=en}}
+*{{a|UK}} {{IPA|/makɹə(ʊ)ˈfalɪk/|lang=en}}
 
 ===Adjective===
 {{en-adj}}
