--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -215,17 +215,17 @@ From {{etyl|ru|fi}}
 
 ----
 
-==Jèrriais==
+==Norman==
 
 ===Etymology===
-From {{etyl|en|roa-jer}} {{term|vodka|lang=en}}.
+{{borrowing|en|vodka|lang=nrf}}.
 
 ===Noun===
-{{roa-jer-noun|m}}
+{{nrf-noun|m}}
 
-# [[#English|vodka]]
+# {{lb|nrf|Jersey}} [[#English|vodka]]
 
-[[Category:roa-jer:Alcoholic beverages]]
+{{catlangcode|nrf|Alcoholic beverages}}
 
 ----
 
