--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -98,6 +98,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Russian: {{t+|ru|вяза́ть|impf}}, {{t+|ru|свя́зывать|impf}}, {{t+|ru|связа́ть|pf}}
 * Scottish Gaelic: {{t|gd|cuibhrich}}, {{t|gd|naisg}}, {{qualifier|sheaves}} {{t|gd|sguab}}
 * Spanish: {{t|es|atar}} (tie), {{t|es|empastar}} (books)
+* Swedish: {{t+|sv|förbinda}}
 * Turkish: {{t+|tr|bağlamak}}
 * Vietnamese: {{t+|vi|kết hợp}}, {{t+|vi|liên kết}}, {{t+|vi|nối}}
 {{trans-bottom}}
@@ -110,6 +111,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Italian: {{t|it|connettere}}
 {{trans-mid}}
 * Russian: {{t+|ru|вяза́ть|impf}}, {{t+|ru|свя́зывать|impf}}, {{t+|ru|связа́ть|pf}}
+* Swedish: {{t+|sv|koppla}}
 * Turkish: {{t+|tr|birleştirmek}}
 * Vietnamese: {{t|vi|ghép cặp}}, {{t|vi|ghép đôi}}
 {{trans-bottom}}
@@ -127,6 +129,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Maori: {{t|mi|paihere}}
 * Portuguese: {{t+|pt|encapar}}, {{t+|pt|encadernar}}
 * Russian: {{t+|ru|переплета́ть|impf}}, {{t+|ru|переплести́|pf}}
+* Swedish: {{t+|sv|binda}}
 * Turkish: {{t+|tr|ciltlemek}}
 * Vietnamese: {{t+|vi|buộc}}, {{t+|vi|cột}}, {{t+|vi|trói}}
 {{trans-bottom}}
