--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -305,6 +305,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Finnish: {{t|fi|räjäyttää}}
 {{trans-mid}}
 * French: [[faire]] {{t+|fr|sauter}}
+* Swedish: {{t+|sv|spränga}}
 {{trans-bottom}}
 
 {{trans-top|to cause sudden destruction}} <!--10-->
