t+sv:[[blåsa]] t+sv:[[blåst]] t+sv:[[slag]] t+sv:[[blom]] ([[WT:EDIT|Assisted]]) <blow#32345682>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -227,6 +227,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Maori: {{t|mi|pūawhe}}
 * Portuguese: {{t+|pt|[[ser]] [[soprado]]}}
 * Romanian: {{t|ro|fi purtat}}
+* Swedish: {{t+|sv|blåsa}}
 * Vietnamese: {{t+|vi|bay}}
 {{trans-bottom}}
 
@@ -245,6 +246,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Russian: {{t|ru|выдува́ть|impf}}, {{t+|ru|вы́дуть|pf}}
 * Spanish: {{t+|es|soplar}}
 * Swahili: {{t+|sw|panchi}}
+* Swedish: {{t+|sv|blåsa}}
 * Vietnamese: {{t+|vi|thổi}}
 {{trans-bottom}}
 
@@ -257,6 +259,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Portuguese: {{t+|pt|assoprar}}
 * Romanian: {{t|ro|cânta la un instrument}}
 * Scottish Gaelic: {{t|gd|sèid}}
+* Swedish: {{t+|sv|blåsa}}
 {{trans-bottom}}
 
 {{trans-top|to make a sound as if being blown}} <!--6-->
@@ -278,6 +281,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Portuguese: {{t+|pt|assoprar}}
 * Scottish Gaelic: {{t|gd|sèid}}
 * Swahili: {{t+|sw|panchi}}
+* Swedish: {{t+|sv|blåsa}}
 * Vietnamese: {{t|vi|phun nước}}
 {{trans-bottom}}
 
@@ -412,6 +416,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Portuguese: {{t+|pt|ventania|f}}
 * Romanian: {{t+|ro|furtună|f}}
 * Swahili: {{t+|sw|panchi}}
+* Swedish: {{t+|sv|blåst|c}}
 {{trans-bottom}}
 
 {{trans-top|chance to catch one’s breath}}
@@ -490,6 +495,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Scottish Gaelic: {{t|gd|beum|m}}, {{t|gd|bualadh|m}}, {{t|gd|buille|f}}
 * Spanish: {{t+|es|golpe}}
 * Swahili: {{t+|sw|panchi}}
+* Swedish: {{t+|sv|slag|n}}
 * Telugu: {{t|te|దెబ్బ}}
 {{trans-bottom}}
 
@@ -504,6 +510,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Russian: {{t+|ru|уда́р|m}}
 * Spanish: {{t+|es|golpe}}
 * Swahili: {{t+|sw|panchi}}
+* Swedish: {{t+|sv|slag|n}}
 * Telugu: {{t|te|దెబ్బ}} (2)
 {{trans-bottom}}
 
@@ -547,6 +554,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 {{trans-top|mass or display of flowers}}
 * Finnish: {{t|fi|kukkaloisto}}
 {{trans-mid}}
+* Swedish: {{t+|sv|blom|c}}
 {{trans-bottom}}
 
 {{trans-top|display of anything brilliant}}
@@ -557,6 +565,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 {{trans-top|state of flowering}}
 * Finnish: {{t|fi|kukinta}}, {{t+|fi|loisto}}
 {{trans-mid}}
+* Swedish: {{t+|sv|blom|c}}
 {{trans-bottom}}
 
 ===Anagrams===
