--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -44,6 +44,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * [[interbellum]] (''between war(s)'')
 {{rel-mid4}}
 * [[labarum]]
+* [[lucidum]]
 * [[mandatum]]
 * [[maximum]]
 * [[medium]]
