--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -84,9 +84,11 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * French: {{t+|fr|lier}}
 * Friulian: {{t|fur|leâ}}
 * German: {{t+|de|verbinden}}, {{t|de|konnektieren}}
+* Greek:
+*: Ancient: {{t|grc|δέω|sc=polytonic}}
+{{trans-mid}}
 * Hungarian: {{t+|hu|összeköt}}
 * Ido: {{t|io|bindar}}
-{{trans-mid}}
 * Indonesian: {{t|id|ikat}}, {{t|id|sambung}}, {{t|id|hubung}}
 * Italian: {{t|it|legare}}
 * Japanese: {{t|ja|繋ぐ|tr=[[つなぐ]], tsunagu}}, {{t|ja|繋げる|tr=[[つなげる]], tsunageru}}, {{t|ja|縛る|tr=しばる, shibaru}}, {{t|ja|結ぶ|tr=むすぶ, musubu}}
@@ -108,8 +110,10 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Czech: {{t|cs|spojit}}
 * Finnish: {{t+|fi|sitoa}}, {{t+|fi|kytkeä}}
 * German: {{t+|de|verbinden}}
-* Italian: {{t|it|connettere}}
+* Greek:
+*: Ancient: {{t|grc|δέω|sc=polytonic}}
 {{trans-mid}}
+* Italian: {{t|it|connettere}}
 * Russian: {{t+|ru|вяза́ть|impf}}, {{t+|ru|свя́зывать|impf}}, {{t+|ru|связа́ть|pf}}
 * Swedish: {{t+|sv|koppla}}
 * Turkish: {{t+|tr|birleştirmek}}
