--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -18,6 +18,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|
 ====Derived terms====
 * {{WPLook|muskrat trap}}
 * {{vern|muskrat weed}}
+* {{verb|muskrat root}}
 
 ====Synonyms====
 * {{sense|''Ondatra zibethicus''}} [[musquash]]
