--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -12,7 +12,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|
 ===Noun===
 {{en-noun}}
 
-# A large [[aquatic]] [[rodent]]; {{taxlink|Ondatra zibethicus|species|noshow=1}}.
+# A large [[aquatic]] [[rodent]] (''[[Ondatra zibethicus]]'').
 # Any of several species of [[shrew]]s in the family [[Soricidae]], especially the Asian house shrew, {{taxlink|Suncus murinus|species|noshow=1}}
 
 ====Derived terms====
