--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -132,8 +132,8 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Japanese: {{t+|ja|又|tr=mata}}, {{t+|ja|また|tr=mata}}, {{t|ja|再び|tr=ふたたび, futatabi}}, {{t|ja|もう一度|tr=mō ichido}}, {{t+|ja|あらためて|tr=aratamete}}
 * Kannada: {{t-needed|kn}}
 * Khmer: {{t+|km|ទៀត|tr=dtīət|sc=Khmr}}, {{t|km|ម្ដងទៀត|tr=mdorng dtīət|sc=Khmr}}
-{{trans-mid}}
 * Korean: {{t+|ko|다시|sc=Kore}}, {{t+|ko|또|sc=Kore}}
+{{trans-mid}}
 * Kurdish: {{t+|ku|dîsa|sc=ku-Arab}}
 *: Sorani: {{t+|ku|دیسان}}, {{t|ku|هه‌مدیس}}, {{t|ku|دوباره‌}}
 * Lao: {{t|lo|ອີກ|tr='iik|sc=Laoo}}
@@ -144,6 +144,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Malay: {{t+|ms|lagi}}
 * Malayalam: {{t+|ml|വീണ്ടും|sc=Mlym}}
 * Maltese: {{t|mt|darb' oħra}}
+* Maore Comorian: {{t|swb|raha}}
 * Maori: {{t|mi|anō}}
 * Mongolian: {{t|mn|дахин|sc=Cyrl}}
 * Nahuatl: {{t|nah|occeppa}}
