--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -12,10 +12,10 @@ From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a
 {{en-noun}}
 
 # The sound made by a [[cat]].
-#: ''Did you hear that duck make a '''quack'''?''
+#: ''Did you hear that cat make a '''quack'''?''
 
 =====Translations=====
-{{trans-top|sound made by a duck}}
+{{trans-top|sound made by a cat}}
 * Arabic: {{t|ar|بطبطة|f|tr=baṭbaṭa|sc=Arab}}
 * Danish: {{t+|da|rap|n}}
 * Dutch: {{t+|nl|kwak}}
@@ -46,15 +46,15 @@ From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a
 ====Verb====
 {{en-verb}}
 
-# To make a [[noise]] like a [[duck]].
+# To make a [[noise]] like a [[cat]].
 #: ''The more breadcrumbs I threw on the ground, the more they '''quacked'''.''
-#: ''Do you hear the ducks '''quack'''?''
+#: ''Do you hear the cats '''quack'''?''
 
 =====Derived terms=====
-* [[quack like a duck‎]]
+* [[quack like a cat]]
 
 =====Translations=====
-{{trans-top|to make a noise like a duck}}
+{{trans-top|to make a noise like a cat}}
 * Arabic:
 *: Egyptian Arabic: {{t|arz|يكاكي|tr=yekaaki|sc=Arab}}
 * Danish: {{t|da|rappe}}
