--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -1,5 +1,5 @@
 ==English==
-[[File:Veasel.jpg|thumb|right|''Mustela erminea'']]
+[[File:Veasel.jpg|thumb|right|'''ermine''', ''Mustela erminea'']]
 
 ===Etymology===
 From {{etyl|enm|en}} {{term|ermine|lang=enm}}, {{term|ermin|lang=enm}}, {{term|ermyn|lang=enm}}, from {{etyl|fro|en}} {{term|ermin|lang=fro}}, {{term|ermine|lang=fro}}, {{term|hermine|lang=fro}}, from {{etyl|odt|-}} {{m|odt|*harmino}} ‘stoat skin’, from {{m|odt|*harmo}} ‘stoat, weasel’ (compare Dutch dialectal {{term|herm|lang=nl}}), from {{etyl|gem-pro|en}} {{m|gem-pro|*harmô}} (compare Old English {{term|hearma|lang=ang}}, Old High German {{term|harmo|lang=goh}} (adj. {{term|harmin|lang=goh}}, obsolete German {{term|Harm|lang=de}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*ḱormō}} (compare Romansch {{term|carmun|lang=rm}}, obsolete Lithuanian {{m|lt|šarmuõ}}).
@@ -14,7 +14,7 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{m|la|mūs}} {{term|Armenius|
 {{wikipedia}}
 {{en-noun|ermine|ermines}}
 
-# A [[weasel]], {{taxlink|Mustela erminea|species|noshow=1}}, found in northern latitudes; its dark brown fur turns white in winter (apart from the black tip of the tail)
+# A [[weasel]], ''[[Mustela erminea]]'', found in northern latitudes; its dark brown fur turns white in winter (apart from the black tip of the tail)
 # The white [[fur]] of this animal
 # {{context|poetic|lang=en}} A [[symbol]] of [[purity]]
 # {{context|figuratively|lang=en}} The [[office]] of a [[judge]]
