--- a/en/m/multi.34076.wikitext
+++ b/en/m/multi.34076.wikitext
@@ -1,4 +1,14 @@
 {{also|multi-|mulți}}
+==English==
+===Etymology===
+Shortening of {{m|en|multituberculate}}.
+===Noun===
+{{en-noun}}
+
+# {{lb|en|informal|paleontology}} A [[multituberculate]].
+#*'''1996''', {{w|Michael Novacek}}, ''Dinosaurs of the Flaming Cliffs'', p. 316:
+#*:Our Mesozoic antecedents are typified by small size; even the largest of the '''multis''' are not larger than a groundhog.
+----
 ==Esperanto==
 
 ===Verb===
