--- a/en/d/desynchronization.775512.wikitext
+++ b/en/d/desynchronization.775512.wikitext
@@ -1,7 +1,10 @@
 ==English==
 ===Etymology===
 
-{{prefix|de|synchronization|lang=en}}
+{{suffix|desynchronize|ation|lang=en}}
+
+===Alternative forms===
+* {{l|en|desynchronisation}}
 
 ===Pronunciation===
 
@@ -11,7 +14,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{context|neurology|lang=en}} A loss of [[synchronization]] of [[brain wave]]s.
+# {{context|American spelling|Oxford|neurology|lang=en}} A loss of [[synchronization]] of [[brain wave]]s.
 #*{{quote-book|page=53|1996|Jaak Pansepp|Emotion:Interdisciplinary Perspectives|chapter=Affective Neuroscience|url=http://books.google.com/books?id=bz5IZu9zNMQC|isbn=0805820280
 |passage=FIG 2.4.  Analysis of event-related '''desynchronizations''' (ERDs) in the author's brain during a 4 s period following the induction of emotional states using the Clynes' technique.}}
 # The loss or absence of [[synchronization]]; [[asynchronism]].
