t+ro:[[consum]] ([[WT:EDIT|Assisted]]) <consumption#32434063>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -50,6 +50,7 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 * Korean: {{t+|ko|소비|sc=Kore}} ({{t+|ko|消費|sc=Kore}})
 * Malay: {{t|ms|penggunaan}}, {{t|ms|konsumsi}}
 * Portuguese: {{t+|pt|consumo|m}}
+* Romanian: {{t+|ro|consum|n}}
 * Russian: {{t+|ru|потребление|n|tr=potreblénije}}
 * Scottish Gaelic: {{t|gd|caitheamh|f}}
 * Spanish: {{t+|es|consumo|m}}
@@ -69,6 +70,7 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 * Italian: {{t+|it|consumo|m}}
 * Khmer: {{t|km|បម្រើបម្រាស់|tr=bom rer bom ras|sc=Khmr}}
 * Portuguese: {{t+|pt|consumo|m}}
+* Romanian: {{t+|ro|consum|n}}
 * Russian: {{t+|ru|потребление|n|tr=potreblénije}}, {{t+|ru|расход|m|tr=rasxód}}
 * Scottish Gaelic: {{t|gd|caitheamh|f}}
 * Spanish: {{t+|es|consumo|m}}
