--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -109,19 +109,23 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 {{rel-bottom}}
 
 ===See also===
-''Months of the year''
-* [[一月]] yīyuè - January
-* [[二月]] èryuè - February
-* [[三月]] sānyuè - March
-* [[四月]] sìyuè - April
-* [[五月]] wŭyuè - May
-* [[六月]] liùyuè - June
-* [[七月]] qīyuè - July
-* [[八月]] bāyuè - August
-* [[九月]] jiŭyuè - September
-* [[十月]] shíyuè - October
-* [[十一月]] shíyīyuè - November
-* [[十二月]] shíèryuè - December
+{{rel-top4|Months of the year}}
+* {{zh-l|一月|yīyuè|January}}
+* {{zh-l|二月|èryuè|February}}
+* {{zh-l|三月|sānyuè|March}}
+{{rel-mid4}}
+* {{zh-l|四月|sìyuè|April}}
+* {{zh-l|五月|wŭyuè|May}}
+* {{zh-l|六月|liùyuè|June}}
+{{rel-mid4}}
+* {{zh-l|七月|qīyuè|July}}
+* {{zh-l|八月|bāyuè|August}}
+* {{zh-l|九月|jiŭyuè|September}}
+{{rel-mid4}}
+* {{zh-l|十月|shíyuè|October}}
+* {{zh-l|十一月|shíyīyuè|November}}
+* {{zh-l|十二月|shíèryuè|December}}
+{{rel-bottom}}
 
 {{zh-cat|Beginning}}
 
