--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -51,62 +51,59 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{sense|moon}} {{zh-l|月亮}}
 
 ====Compounds====
-{{rel-top4|derivations}}
-* {{zh-l|月白}}
-* {{zh-l|月白風情}}
-* {{zh-l|月半}}
-* {{zh-l|月報}}
-* {{zh-l|月餅}}
-* {{zh-l|月初}}
-* {{zh-l|月底}}
-* {{zh-l|月度}}
-* {{zh-l|月份}}, {{zh-l|月份兒}}
-* {{zh-l|月份牌}}, {{zh-l|月份牌兒}}
-* {{zh-l|月俸}}
-* {{zh-l|月宮}}
-* {{zh-l|月光}}
-{{rel-mid4}}
-* {{zh-l|月華}}
-* {{zh-l|月季}}
-* {{zh-l|月經}}
-* {{zh-l|月刊}}
-* {{zh-l|月藍}}
-* {{zh-l|月老}}
-* {{zh-l|月曆}}
-* {{zh-l|月利}}
-* {{zh-l|月例}}
-* {{zh-l|月亮}}
-* {{zh-l|月亮地兒}}
-* {{zh-l|月亮門兒}}
-* {{zh-l|月令}}
-{{rel-mid4}}
-* {{zh-l|月門}}
-* {{zh-l|月末}}
-* {{zh-l|月偏食}}
-* {{zh-l|月票}}
-* {{zh-l|月琴}}
-* {{zh-l|月球}}
-* {{zh-l|月球儀}}
-* {{zh-l|月全食}}
-* {{zh-l|月入}}
-* {{zh-l|月色}}
-* {{zh-l|月食}}
-* {{zh-l|月臺}}
-* {{zh-l|月臺票}}
-{{rel-mid4}}
-* {{zh-l|月尾}}
-* {{zh-l|月息}}
-* {{zh-l|月下老人}}
-* {{zh-l|月相}}
-* {{zh-l|月薪}}
-* {{zh-l|月牙}}, {{zh-l|月牙兒}}, {{zh-l|月芽}}, {{zh-l|月芽兒}}
-* {{zh-l|月夜}}
-* {{zh-l|月中}}
-* {{zh-l|月終}}
-* {{zh-l|月子}}
-* {{zh-l|月子病}}
-* {{zh-l|新月形面包}}
-{{rel-bottom}}
+{{der3
+| {{zh-l|月白}}
+| {{zh-l|月白風情}}
+| {{zh-l|月半}}
+| {{zh-l|月報}}
+| {{zh-l|月餅}}
+| {{zh-l|月初}}
+| {{zh-l|月底}}
+| {{zh-l|月度}}
+| {{zh-l|月份}}, {{zh-l|月份兒}}
+| {{zh-l|月份牌}}, {{zh-l|月份牌兒}}
+| {{zh-l|月俸}}
+| {{zh-l|月宮}}
+| {{zh-l|月光}}
+| {{zh-l|月華}}
+| {{zh-l|月季}}
+| {{zh-l|月經}}
+| {{zh-l|月刊}}
+| {{zh-l|月藍}}
+| {{zh-l|月老}}
+| {{zh-l|月曆}}
+| {{zh-l|月利}}
+| {{zh-l|月例}}
+| {{zh-l|月亮}}
+| {{zh-l|月亮地兒}}
+| {{zh-l|月亮門兒}}
+| {{zh-l|月令}}
+| {{zh-l|月門}}
+| {{zh-l|月末}}
+| {{zh-l|月偏食}}
+| {{zh-l|月票}}
+| {{zh-l|月琴}}
+| {{zh-l|月球}}
+| {{zh-l|月球儀}}
+| {{zh-l|月全食}}
+| {{zh-l|月入}}
+| {{zh-l|月色}}
+| {{zh-l|月食}}
+| {{zh-l|月臺}}
+| {{zh-l|月臺票}}
+| {{zh-l|月尾}}
+| {{zh-l|月息}}
+| {{zh-l|月下老人}}
+| {{zh-l|月相}}
+| {{zh-l|月薪}}
+| {{zh-l|月牙}}, {{zh-l|月牙兒}}, {{zh-l|月芽}}, {{zh-l|月芽兒}}
+| {{zh-l|月夜}}
+| {{zh-l|月中}}
+| {{zh-l|月終}}
+| {{zh-l|月子}}
+| {{zh-l|月子病}}
+| {{zh-l|新月形面包}}
+}}
 
 ===See also===
 {{rel-top4|Months of the year}}
