--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -133,6 +133,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 * Italian: {{t+|it|personale|m}}, {{t+|it|organico|m}}
 * Japanese: {{t+|ja|人員|tr=じんいん, jin'in|sc=Jpan}}, {{t+|ja|スタッフ|tr=sutaffu|sc=Jpan}}
 {{trans-mid}}
+* Lao: {{t|lo|ພະນັກງານ|sc=Laoo}}
 * Macedonian: {{t|mk|персонал|m|tr=personál}}, {{t|mk|кадар|m|tr=kádar}}
 * Malay: {{t|ms|kakitangan}}
 * Persian: {{t+|fa|پرسنل|tr=personel|sc=fa-Arab}}, {{t+|fa|کادر|tr=kâdr|sc=fa-Arab}}
