--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -170,6 +170,7 @@ From {{etyl|enm|en}} {{m|enm|at}}, from {{etyl|ang|en}} {{m|ang|æt||at, near, b
 * Swedish: {{t+|sv|vid}}
 *: ''At five o’clock'' = klockan fem ''or'' vid fem {{qualifier|informal}}
 *: ''At midnight'' = vid midnatt
+* Vietnamese: {{t+|vi|lúc}}
 * Volapük: {{t+|vo|tü}}
 * Walloon: {{t+|wa|a}}
 * Welsh: {{t+|cy|am}}, {{t+|cy|ar}}
