--- a/en/w/white gold.855391.wikitext
+++ b/en/w/white gold.855391.wikitext
@@ -3,6 +3,7 @@
 ===Noun===
 {{en-noun|head=[[white]] [[gold]]}}
 
+# {{context|obsolete|lang=en}} [[platinum]]
 # A precious metal [[alloy]] consisting of gold and a platinum group metal such as [[platinum]] or [[palladium]] or other [[white metal]] such as [[nickel]].
 
 ====See also====
