/* Noun */ bad comma. can be uncountable <sausage meat#32444664>

--- a/en/s/sausage meat.776070.wikitext
+++ b/en/s/sausage meat.776070.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
-# Ground, spiced, meat that can be stuffed in a [[sausage]] or used as a sausage [[patty]].
+# Ground, spiced meat that can be stuffed in a [[sausage]] or used as a sausage [[patty]].
 [[Category:en:Sausages]]
