t+pl:[[jaźwiec]] ([[WT:EDIT|Assisted]]) <badger#32444691>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -101,7 +101,7 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 * Occitan: {{t+|oc|tais|m}}, {{t+|oc|rabàs|m}}
 * Old English: {{t|ang|brocc|m}}
 * Persian: {{t+|fa|گورکن|tr=gurkan|sc=fa-Arab}}
-* Polish: {{t+|pl|borsuk|m}}
+* Polish: {{t+|pl|borsuk|m}}, {{t+|pl|jaźwiec|m}}
 * Portuguese: {{t+|pt|texugo|m}}
 * Romanian: {{t+|ro|viezure|m}}, {{t+|ro|bursuc|m}}
 * Romansch: {{t|rm|tais}}
