--- a/en/s/summerly.801716.wikitext
+++ b/en/s/summerly.801716.wikitext
@@ -1,8 +1,12 @@
 ==English==
+
+===Etymology===
+From {{etyl|enm|en}} {{m|enm|somerli}}, {{m|enm|somerlich}}, from {{etyl|ang|en}} {{m|ang|sumorlīċ}}, {{m|ang|sumorlīc||summerly}}, equivalent to {{suffix|summer|ly|lang=en}}. Compare German {{m|de|sommerlich||summerly}}, Danish {{m|da|sommerlig||summerly}}, Swedish {{m|sv|sommarlik||summerly}}.
+
 ===Adjective===
 {{en-adj}}
 
-#[[summer-like]]
+# Characteristic of [[summer]]; [[summer-like]]; warm and sunny.
 
 ====Synonyms====
 *[[summerish]]
