--- a/en/s/summerly.801716.wikitext
+++ b/en/s/summerly.801716.wikitext
@@ -7,11 +7,13 @@ From {{etyl|enm|en}} {{m|enm|somerli}}, {{m|enm|somerlich}}, from {{etyl|ang|en}
 {{en-adj}}
 
 # Characteristic of [[summer]]; [[summer-like]]; warm and sunny.
+#* '''1867''', Frederick Metcalfe, ''The Oxonian in Iceland'' (page 202)
+#*: "A '''summerly''' day for you," said my host; "You ought to be here in winter. It is impossible then to get out of the doors for the snow and wind. Ugh! dreadful weather!"
 
 ====Synonyms====
-*[[summerish]]
-*[[summer-like]]
-*[[summery]]
+* [[summerish]]
+* [[summer-like]]
+* [[summery]]
 
 ====Derived terms====
 *[[summerliness]]
