--- a/en/t/think through.720293.wikitext
+++ b/en/t/think through.720293.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top|to fully consider an action}}
+* Hungarian: {{t|hu|végiggondol}}
 * Russian: {{t+|ru|продумывать|sc=Cyrl}}
 {{trans-mid}}
 * Spanish: {{t+|es|cavilar}}
