--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -36,7 +36,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 # {{context|visual art|lang=en}} The relative thickness of a drawn [[rule]] or painted [[brushstroke]], [[line weight]].
 # {{context|visual art|lang=en}} The [[illusion]] of [[mass]].
 # {{context|visual art|lang=en}} The [[thickness]] and [[opacity]] of [[paint]].
-# [[pressure]]; [[burden]]
+# [[Pressure]]; [[burden]].
 #: {{ux|en|the '''weight''' of care or business}}
 #* Shakespeare
 #*: The '''weight''' of this sad time.
