--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -58,7 +58,7 @@ From {{etyl|enm|en}} {{m|enm|rotten}}, {{m|enm|roten}}, from {{etyl|ang|en}} {{m
 * Latin: {{t|la|pūtesco}}, {{t|la|tābesco}}
 * Latvian: {{t+|lv|pūt}}
 * Lithuanian: {{t|lt|pūti}}
-* Persian: {{t+|fa|پوسیدن|tr=pusidan|sc=fa-Arab}}, {{t+|fa|گندیدن|tr=gandidan|sc=fa-Arab}}, {{t|fa|لخسیدن|tr=loxsidan|sc=fa-Arab}}
+* Persian: {{t+|fa|پوسیدن|tr=pusidan|sc=fa-Arab}}, {{t+|fa|گندیدن|tr=gandidan|sc=fa-Arab}}, {{t|fa|لخسیدن|tr=loxsidan|sc=fa-Arab}} {{qualifier|dialectal}}
 * Polish: {{t+|pl|gnić|impf}}
 * Portuguese: {{t|pt|putrefazer}}, {{t+|pt|apodrecer}}
 * Quechua: {{t+|qu|ismuy}}
