--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -90,7 +90,7 @@ From {{etyl|enm|en}} {{term|beden|lang=enm}}, from the {{etyl|ang|en}} verb {{m|
 * Italian: {{t|it|fare un'offerta per un'asta}}
 {{trans-mid}}
 * Japanese: {{t|ja|[[値]][[を]][[つける]]|tr=ねをつける, ne o tsukeru}}, {{t|ja|入札|tr=にゅうさつする, nyūsatsu suru|alt=入札する}}
-* Jèrriais: {{t-check|roa-jer|offri}}
+* Norman: {{t-check|nrf|offri}} {{qualifier|Jersey}}
 * Portuguese: {{t+|pt|oferecer}}
 * Russian: {{t|ru|[[предлага́ть]] [[цена|це́ну]]|impf}}, {{t|ru|[[предложи́ть]] [[цена|це́ну]]|pf}}
 * Swedish: {{t+|sv|bjuda}}
