--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -144,17 +144,7 @@ From {{etyl|enm|en}} {{term|beden|lang=enm}}, from the {{etyl|ang|en}} verb {{m|
 #*: [Running,] Doyle had passed up a dozen chances to go underground. He was swinging east again making another '''bid''' for Arcade.
 
 =====Derived terms=====
-{{der-top}}
-* [[bid price]]
-* [[bid size]]
-* [[donkey bid]]
-* [[dummy bid]]
-{{der-mid}}
-* [[leadership bid]]
-* [[sealed bid]]
-* [[takeover bid]]
-* [[vendor bid]]
-{{der-bottom}}
+{{der3|bid price|bid size|donkey bid|dummy bid|leadership bid|sealed bid|takeover bid|vendor bid|lang=en}}
 
 =====Translations=====
 {{trans-top|offer at an auction}}
