sure, [[benter]] and [[bentest]] exist <bent#32462906>

--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -15,7 +15,7 @@ From {{term|bend|lang=en}}.
 # {{en-past of|bend}}
 
 ====Adjective====
-{{en-adj}}
+{{en-adj|er|more}}
 
 # {{context|Of something that is usually straight|lang=en}} folded, dented
 # {{context|derogatory|colloquial|chiefly|UK|lang=en}} [[homosexual|Homosexual]].
