t+yue:[[椰花菜]] ([[WT:EDIT|Assisted]]) <cauliflower#32474132>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -34,6 +34,7 @@ From 16th century {{term|cole-florye|lang=en}}. Compare Latin {{term|caulis|lang
 * Burmese: {{t+|my|ဂေါ်ဖီပန်း|sc=Mymr}}
 * Catalan: {{t|ca|coliflor|f}}
 * Chinese:
+*: Cantonese: {{t|yue|椰花菜|tr=je4 coi3 faa1|sc=Hani}}
 *: Mandarin: {{t+|cmn|花椰菜|tr=huāyēcài|sc=Hani}}, {{t+|cmn|菜花|tr=càihuā|sc=Hani}}
 * Czech: {{t+|cs|květák|m}}, {{t|cs|karfiól|m}}
 * Danish: {{t+|da|blomkål}}
