Undo revision 32475390 by [[Special:Contributions/Howdoidothis|Howdoidothis]] ([[User talk:Howdoidothis|talk]]) <yeah#32475396>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -72,6 +72,7 @@ Alternative (but less likely) etymology derives ''yeah'' from a drawling pronunc
 
 ===References===
 <references/>
+cara.com/boullie/boullie/hmt
 
 ===Interjection===
 {{en-interj}}
