--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -74,6 +74,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Georgian: {{t|ka|მაშინ|tr=mašin|sc=Geor}}
 * German: {{t+|de|dann}}, {{t+|de|damals}}
 * Greek: {{t+|el|τότε|tr=tóte}}
+*: Ancient: {{t|grc|τότε}}, {{t|grc|ἄρα}}
 * Hebrew: {{t+|he|אז|tr=az|sc=Hebr}}
 * Hindi: {{t|hi|तब|tr=tab|sc=Deva}}
 * Hungarian: {{t+|hu|akkor}}
@@ -195,10 +196,12 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * French: {{t+|fr|puis}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|danach}}
+* Greek:
+*: Ancient: {{t|grc|τότε}}, {{t|grc|ἄρα}}, {{t|grc|ἔπειτα}}
 * Hungarian: {{t+|hu|aztán}}, {{t+|hu|majd}}
 * Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t|ja|次に|tr=tsugi-ni}}
-* Kurdish: {{t+|ku|paşî}}, {{t+|ku|dûre}}, {{t+|ku|piştre}}, {{t+|ku|dûvre}}, {{t|ku|peyre}}
 {{trans-mid}}
+* Kurdish: {{t+|ku|paşî}}, {{t+|ku|dûre}}, {{t+|ku|piştre}}, {{t+|ku|dûvre}}, {{t|ku|peyre}}
 * Lao: {{t-needed|lo}}
 * Latin: {{t+|la|deinde}}, {{t+|la|exinde}}
 * Malay: {{t|ms|selepas itu}}
