/* Noun */ # The raised or ridged edge or surface made in milling anything, such as a coin or screw. <mill#32509782>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -21,6 +21,7 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}.
 #: {{usex|a cider '''mill'''; a cane '''mill'''|lang=en}}
 # A machine for grinding and polishing.
 #: {{usex|a lapidary '''mill'''|lang=en}}
+# The raised or ridged edge or surface made in milling anything, such as a coin or screw.
 # A manufacturing plant for paper, steel, textiles, etc.
 #: {{usex|a steel '''mill'''|lang=en}}
 # A building housing such a plant.
