auto-format <rot#32512305>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -301,14 +301,14 @@ From {{etyl|gmh|de}} {{m|gmh|rōt||red, red-haired}}, from {{etyl|goh|de}} {{m|g
 {{wikipedia|lang=no|rot (plantedel)}}
 
 ===Etymology 1===
-From {{etyl|non|nb}} {{term|rót|lang=non}}, from {{etyl|gem-pro|nb}} {{m|gem-pro|*wrōts}}, from {{etyl|ine-pro|nb}} {{m|ine-pro|*wréh₂ds}}.
+From {{etyl|non|nb}} {{m|non|rót}}, from {{etyl|gem-pro|nb}} {{m|gem-pro|*wrōts}}, from {{etyl|ine-pro|nb}} {{m|ine-pro|*wréh₂ds}}.
 
 ====Noun====
 {{head|nb|noun|g=m|g2=f|definite singular|rota|or|roten|indefinite plural|røtter|definite plural|røttene}}
 
-# [[root]] (''part of a plant normally below ground level'')
-# [[root]] (''of a tooth'')
-# [[root]] (''of a hair'')
+# [[root]] {{gloss|part of a plant normally below ground level}}
+# [[root]] {{gloss|of a tooth}}
+# [[root]] {{gloss|of a hair}}
 
 =====Derived terms=====
 * {{l|nb|gulrot}}
@@ -319,6 +319,7 @@ From {{etyl|non|nb}} {{term|rót|lang=non}}, from {{etyl|gem-pro|nb}} {{m|gem-pr
 * {{R:The Bokmål Dictionary}}
 
 ===Etymology 2===
+
 ====Verb====
 {{head|nb|verb form}}
 
@@ -330,14 +331,14 @@ From {{etyl|non|nb}} {{term|rót|lang=non}}, from {{etyl|gem-pro|nb}} {{m|gem-pr
 {{wikipedia|lang=nn|røter}}
 
 ===Etymology===
-From {{etyl|non|nn}} {{term|rót|lang=non}}, from {{etyl|gem-pro|nn}} {{m|gem-pro|*wrōts}}, from {{etyl|ine-pro|nn}} {{m|ine-pro|*wréh₂ds}}.
+From {{etyl|non|nn}} {{m|non|rót}}, from {{etyl|gem-pro|nn}} {{m|gem-pro|*wrōts}}, from {{etyl|ine-pro|nn}} {{m|ine-pro|*wréh₂ds}}.
 
 ===Noun===
 {{head|nn|noun|g=f|definite singular|rota|indefinite plural|røter|definite plural|røtene}}
 
-# [[root]] (''of a plant'')
-# [[root]] (''of a tooth'')
-# [[root]] (''of a hair'')
+# [[root]] {{gloss|of a plant}}
+# [[root]] {{gloss|of a tooth}}
+# [[root]] {{gloss|of a hair}}
 
 ====Derived terms====
 * {{l|nb|gulrot}}
@@ -369,7 +370,7 @@ From {{etyl|gem-pro|goh}} {{m|gem-pro|*raudaz}} (compare {{etyl|osx|-}} {{m|osx|
 ==Swedish==
 
 ===Etymology===
-From {{etyl|non|sv}} {{term|rót|lang=non}}, from {{etyl|gem-pro|sv}} {{m|gem-pro|*wrōts}}, from {{etyl|ine-pro|sv}} {{m|ine-pro|*wréh₂ds}}.
+From {{etyl|non|sv}} {{m|non|rót}}, from {{etyl|gem-pro|sv}} {{m|gem-pro|*wrōts}}, from {{etyl|ine-pro|sv}} {{m|ine-pro|*wréh₂ds}}.
 
 ===Pronunciation===
 * {{audio|Sv-en rot.ogg|audio|lang=sv}}
