--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -532,7 +532,7 @@ From {{etyl|gem-pro|non}} {{m|gem-pro|*at||at, to}}. Cognate with {{etyl|ang|-}}
 ==Pipil==
 
 ===Etymology===
-{{etyl|azc-nah-pro|ppl}} {{m|azc-nah-pro|*ātla}}, from {{etyl|azc-pro|ppl}} {{m|azc-pro|*paha}}. Cognate to Nahuatl ''[[atl]]''.
+From {{etyl|azc-nah-pro|ppl}} {{m|azc-nah-pro|*ātla}}, from {{etyl|azc-pro|ppl}} {{m|azc-pro|*paha}}. Cognate to Nahuatl ''[[atl]]''.
 
 ===Noun===
 {{head|ppl|noun}}
