/* Noun */ # A [[treadmill]]. <!--Webster 1913--> <mill#32515642>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -46,6 +46,7 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}.
 # {{label|en|mining}} An excavation in rock, transverse to the workings, from which material for filling is obtained.
 # {{label|en|mining}} A passage underground through which ore is shot.
 # A [[milling cutter]].
+# A [[treadmill]]. <!--Webster 1913-->
 # {{label|en|trading card games}} A card or deck that relies on the strategy of putting cards directly from the draw pile into the discard pile.
 
 [[Category:en:Magic: The Gathering]]
