# {{cx|intransitive|lang=en}} To undergo [[hull]]ing. #: ''This maize '''mills''' well.'' # {{cx|intransitive|slang|lang=en}} To take part in a [[fistfight]]; to [[box]]. # {{cx|transitive|mining|lang=en}} To fill (a [[winze]] or interior incline) with br <mill#32515828>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -283,16 +283,20 @@ From the noun {{term|#Noun|mill}}.
 # {{label|en|transitive}} To [[engrave]] one or more [[groove]]s or a pattern around the edge of (a [[cylindrical]] object such as a coin).
 # {{label|en|intransitive|followed by|_|[[around]], [[about]], etc.}} To move about in an [[aimless]] fashion.
 #: {{usex|I didn't have much to do, so I just '''milled around''' the town looking at the shops.|lang=en}}
-#* Rudyard Kipling
+#* {{w|Rudyard Kipling}}
 #*: The deer and the pig and the nilghai were '''milling''' round and round in a circle of eight or ten miles radius, while the Eaters of Flesh skirmished round its edge.
 # {{label|en|zoology|of air-breathing creatures}} To [[swim]] [[underwater]].
 # {{label|en|transitive|slang}} To [[beat]]; to [[pound]].
-#* Rudyard Kipling
+#* {{w|Rudyard Kipling}}
 #*: {{usex|Ortheris said nothing for a while. Then he unslung his belt, heavy with the badges of half a dozen regiments that his own had lain with, and handed it over to Mulvaney.<br>"I'm too little for to '''mill''' you, Mulvaney," said he, "an' you've strook me before; but you can take an' cut me in two with this 'ere if you like."|lang=en}}
 #: {{rfquotek|Thackeray}}
 # To pass through a fulling mill; to [[full]], as cloth.
-# To roll (steel, etc.) into bars.
-# To make (drinking chocolate) frothy, as by churning.
+# {{cx|transitive|lang=en}} To roll (steel, etc.) into bars.
+# {{cx|transitive|lang=en}} To make (drinking chocolate) frothy, as by churning.
+# {{cx|intransitive|lang=en}} To undergo [[hull]]ing.
+#: ''This maize '''mills''' well.''
+# {{cx|intransitive|slang|lang=en}} To take part in a [[fistfight]]; to [[box]].
+# {{cx|transitive|mining|lang=en}} To fill (a [[winze]] or interior incline) with broken [[ore]], to be drawn out at the bottom.
 # {{label|en|trading card games}} To place cards into the discard pile directly from the draw pile.
 
 =====Synonyms=====
