/* Verb */ # {{label|en|zoology|of a whale}} To [[swim]] suddenly in a new direction.  # {{label|en|transitive}} To cause to mill, or circle around. #: ''to '''mill''' cattle'' <mill#32516165>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -285,7 +285,10 @@ From the noun {{term|#Noun|mill}}.
 #: {{usex|I didn't have much to do, so I just '''milled around''' the town looking at the shops.|lang=en}}
 #* {{w|Rudyard Kipling}}
 #*: The deer and the pig and the nilghai were '''milling''' round and round in a circle of eight or ten miles radius, while the Eaters of Flesh skirmished round its edge.
+# {{label|en|transitive}} To cause to mill, or circle around.
+#: ''to '''mill''' cattle''
 # {{label|en|zoology|of air-breathing creatures}} To [[swim]] [[underwater]].
+# {{label|en|zoology|of a whale}} To [[swim]] suddenly in a new direction.
 # {{label|en|transitive|slang}} To [[beat]]; to [[pound]].
 #* {{w|Rudyard Kipling}}
 #*: {{usex|Ortheris said nothing for a while. Then he unslung his belt, heavy with the badges of half a dozen regiments that his own had lain with, and handed it over to Mulvaney.<br>"I'm too little for to '''mill''' you, Mulvaney," said he, "an' you've strook me before; but you can take an' cut me in two with this 'ere if you like."|lang=en}}
