--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -12,7 +12,7 @@ From {{etyl|frm|en}} {{term|advertissement||statement calling attention|lang=frm
 * {{a|NZ}} {{IPA|/ˈædvəˌtʌɪzmənt/|/ədˈvɜːtɪsmənt/|lang=en}}
 * {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/|lang=en}} (occasionally {{IPAchar|/ad.və.ˈtʌɪz.mənt/|lang=en}}/ in some regions)
 * {{audio|Advertisement.ogg|Audio (UK)|lang=en}}
-* {{a|US}} {{IPA|/ədˈvɝtɪzmənt/}}, rarely {{IPAchar|/ˈædvɚˌtaɪzmənt/|lang=en}}
+* {{a|US}} {{IPA|/ədˈvɝtɪzmənt/|lang=en}}, rarely {{IPAchar|/ˈædvɚˌtaɪzmənt/|lang=en}}
 * {{audio|en-us-advertisement.ogg|Audio (US)|lang=en}}
 * {{hyphenation|ad|ver|tise|ment|lang=en}}
 
