--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -18,7 +18,7 @@
 * Esperanto: {{t|eo|KD-NLM}}
 {{trans-mid}}
 * Finnish: {{t|fi|CD-ROM-levy}}, {{t|fi|CD-ROM}}
-* Romanian: {{t|ro|CD-ROM}}, {{t|ro|compact disc - memorie numai citibilă}}
+* Romanian: {{t|ro|CD-ROM}}
 {{trans-bottom}}
 
 [[cs:CD-ROM]]
