/* Noun */ very rare <fung#32533918>

--- a/en/f/fung.803241.wikitext
+++ b/en/f/fung.803241.wikitext
@@ -6,7 +6,7 @@ Anglicization of ''[[fungus]]''.
 ===Noun===
 {{en-noun}}
 
-# {{context|rare|lang=en}} [[fungus|Fungus]].
+# {{context|very rare|lang=en}} [[fungus|Fungus]].
 
 [[io:fung]]
 [[pl:fung]]
