--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -54,6 +54,7 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 * Russian: {{t+|ru|максимум|m|tr=máksimum}}
 * Spanish: {{t+|es|máximo}}
 * Telugu: {{t|te|గరిష్ఠం|tr=garishThaM}}
+* Vietnamese: {{t-needed|vi}}
 * Welsh: {{t+|cy|uchafswm}}
 {{trans-bottom}}
 
