/* Derived terms */ ++ <bamboo#32537069>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -23,6 +23,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * [[bamboo clam]]
 * [[Bamboo Curtain]], [[bamboo curtain]]
 * [[bamboo man]]
+* {{l|en|bamboo rat}}
 
 ====Translations====
 {{trans-top|plant}}
