--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -3,7 +3,7 @@
 ===Etymology===
 {{etyl|la|en}} {{term|-ica||(plural suffix)|lang=la}}, plural form of {{term|-icum||(singular suffix)|lang=la}}.
 
-Note that etymologically this is not {{term|-ic|lang=en}} + {{term|-a||(plural ending)|lang=la}}, as {{term|-ic}} is the English form, having dropped the {{term|-um|lang=la}}, though adding an ''-a'' to an English word ending in ''-ic'' does produce a superficial etymologically.
+Note that etymologically this is not {{m|en|-ic}} + {{m|la|-a||(plural ending)}}, as {{m|en|-ic}} is the English form, having dropped the {{m|la|-um}}, though adding an ''-a'' to an English word ending in ''-ic'' does produce a superficial etymologically.
 
 ===Suffix===
 {{en-suffix}}
@@ -11,7 +11,7 @@ Note that etymologically this is not {{term|-ic|lang=en}} + {{term|-a||(plural e
 # a [[collection]] of things that relate to a specific place, person, theme, etc.
 
 ====Usage notes====
-Not productive, and rarely used; {{term|-ana|lang=en}} and {{term|-ia|lang=en}} are more common.
+Not productive, and rarely used; {{m|en|-ana}} and {{m|en|-ia}} are more common.
 
 ====Synonyms====
 * [[-ana]], [[-iana]]
@@ -29,7 +29,7 @@ Not productive, and rarely used; {{term|-ana|lang=en}} and {{term|-ia|lang=en}} 
 ===Suffix===
 {{head|nl|suffix}}
 
-# {{l|nl|-ica}}, female of {{l|nl|-icus}}
+# {{feminine of|-icus|lang=nl}}
 
 {{suffixsee|nl}}
 
@@ -61,6 +61,24 @@ Not productive, and rarely used; {{term|-ana|lang=en}} and {{term|-ia|lang=en}} 
 
 ----
 
+==Polish==
+
+===Alternative forms===
+* {{l|pl|-yca}}
+
+===Etymology===
+From {{etyl|sla-pro|pl}} {{m|sla-pro|*-ica}}.
+
+===Suffix===
+{{head|pl|suffix|g=f}}
+
+# {{non-gloss definition|Forms feminine nouns.}}
+
+====Declension====
+{{pl-decl-noun-f|-i|c}}
+
+----
+
 ==Portuguese==
 
 ===Suffix===
@@ -88,21 +106,3 @@ From {{etyl|sla-pro|sh}} {{term|*-ica|lang=sla-pro}}.
 [[es:-ica]]
 [[fr:-ica]]
 [[nah:-ica]]
-
-----
-{{rfc-auto}}
-==Polish==
-
-===Etymology===
-From {{etyl|sla-pro|pl}} {{m|sla-pro|*-ica}}.
-
-===Alternative forms===
-* {{l|pl|-yca}}
-
-===Suffix===
-{{head|pl|suffix|g=f}}
-
-# {{non-gloss definition|Forms feminine nouns.}}
-
-====Declension====
-{{pl-decl-noun-f|-i|c}}
