t+wa:[[apicî]] t+wa:[[saizi]] t+fr:[[saisir]] ([[WT:EDIT|Assisted]]) <seize#32559022>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -80,6 +80,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 * Swedish: {{t+|sv|gripa}}, {{t+|sv|fånga}}, {{t+|sv|tillskansa}}
 * Turkish: {{t+|tr|kapmak}}
 * Volapük: {{t+|vo|gleipön}}
+* Walloon: {{t+|wa|apicî}}
 {{trans-bottom}}
 
 {{trans-top|take advantage}}
@@ -99,7 +100,9 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 {{trans-top|take possession of (by force, law etc)}}
 * Czech: {{t|cs|uchvátit}}, {{t+|cs|zabavit|pf}}, {{t|cs|zkonfiskovat}}
 {{trans-mid}}
+* French: {{t+|fr|saisir}}
 * Portuguese: {{t+|pt|apreender}}
+* Walloon: {{t+|wa|saizi}}
 {{trans-bottom}}
 
 {{trans-top|to have a sudden and powerful effect upon}}
